--- a/index.html
+++ b/index.html
@@ -43,11 +43,12 @@
         <div class="nav-divider desktop-only"></div>
 
         <a href="https://wa.me/264932783626" target="_blank" class="nav-cta">
-            <i class="fa-brands fa-whatsapp"></i>
+            <img src="assets/icon/whatsapp-white.svg" alt="WhatsApp" class="cta-icon">
             <span class="cta-text">Let's Chat</span>
         </a>
 
         <button class="hamburger" aria-label="Menu">
+            <span class="bar"></span>
             <span class="bar"></span>
             <span class="bar"></span>
         </button>
@@ -103,6 +104,10 @@
             <div class="tech-item">Flutter</div>
             <div class="tech-item">Dart</div>
             <div class="tech-item">Git</div>
+            <div class="tech-item">SASS</div>
+            <div class="tech-item">Linux</div>
+            <div class="tech-item">PHP</div>
+            
         </div>
     </div>
 
