--- a/projects.html
+++ b/projects.html
@@ -1,80 +1,175 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Code Vault | Josivaldo Ferreira</title>
+    <title>Projetos | Josivaldo Ferreira</title>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/projects.css">
+    <link rel="stylesheet" href="assets/css/global.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
+
 <body>
 
     <div class="cursor-dot"></div>
     <div class="cursor-outline"></div>
 
- 
-<header class="main-header">
-    <nav class="navbar">
-        
-        <div class="nav-group desktop-only">
-            <a href="index.html" class="nav-link">Home</a>
-            <a href="projects.html" class="nav-link">Vault</a>
-            <a href="contact.html" class="nav-link">Contact</a>
+    <header class="main-header">
+        <nav class="navbar">
+            <div class="nav-group desktop-only">
+                <a href="index.html" class="nav-link" data-i18n="nav.home">Início</a>
+                <a href="projects.html" class="nav-link active" data-i18n="nav.vault">Projetos</a>
+                <a href="contact.html" class="nav-link" data-i18n="nav.contact">Contato</a>
+            </div>
+            <div class="nav-divider desktop-only"></div>
+            <a href="https://wa.me/264932783626" target="_blank" class="nav-cta">
+                <img src="assets/icons/whatsapp-white.svg" alt="WhatsApp" class="cta-icon">
+                <span class="cta-text" data-i18n="nav.chat">Conversar</span>
+            </a>
+            <button class="hamburger" aria-label="Menu">
+                <span class="bar"></span><span class="bar"></span><span class="bar"></span>
+            </button>
+        </nav>
+    </header>
+
+    <div class="mobile-menu-overlay">
+        <nav class="mobile-links">
+            <a href="index.html" class="mobile-link" data-i18n="nav.home">Início</a>
+            <a href="projects.html" class="mobile-link" data-i18n="nav.vault">Projetos</a>
+            <a href="contact.html" class="mobile-link" data-i18n="nav.contact">Contato</a>
+            <a href="https://wa.me/264932783626" target="_blank" class="mobile-link mobile-cta">
+                <i class="fa-brands fa-whatsapp"></i> <span data-i18n="nav.chat">WhatsApp</span>
+            </a>
+        </nav>
+        <div class="mobile-footer">
+            <p data-i18n="mobile.footer">Based in Namibia 🇳🇦</p>
         </div>
-
-        <div class="nav-divider desktop-only"></div>
-
-        <a href="https://wa.me/264932783626" target="_blank" class="nav-cta">
-            <img src="assets/icon/whatsapp-white.svg" alt="WhatsApp" class="cta-icon">
-            <span class="cta-text">Let's Chat</span>
-        </a>
-
-        <button class="hamburger" aria-label="Menu">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-        </button>
-
-    </nav>
-</header>
-
-<div class="mobile-menu-overlay">
-    <nav class="mobile-links">
-        <a href="index.html" class="mobile-link">Home</a>
-        <a href="projects.html" class="mobile-link">Code Vault</a>
-        <a href="contact.html" class="mobile-link">Contact</a>
-    </nav>
-    <div class="mobile-footer">
-        <p>Based in Namibia 🇳🇦</p>
     </div>
-</div>
 
     <main class="repo-page-container">
-        
 
+        <div class="back-btn-wrapper">
+            <a href="index.html" class="custom-back-btn">
+                <i class="fa-solid fa-arrow-left"></i>
+                <span data-i18n="nav.home">Voltar</span>
+            </a>
+        </div>
 
-        <div id="repo-grid" class="repo-grid">
-            <div class="loading-indicator">Fetching data from GitHub...</div>
+        <header class="repo-header">
+            <h1 data-i18n="vault.header">Galeria de Projetos</h1>
+            <p data-i18n="vault.desc">Uma seleção de websites desenvolvidos e interfaces desenhadas.</p>
+        </header>
+
+        <div class="gallery-grid">
+
+            <div class="gallery-card">
+                <div class="gallery-image">
+                    <img src="assets/img/velvet-preview.png" alt="Velvet Models">
+                    <div class="gallery-overlay"></div>
+                </div>
+                <div class="gallery-content">
+                    <div class="gallery-tags">
+                        <span>React</span>
+                        <span>Dev</span>
+                    </div>
+                    <h3>Velvet Models</h3>
+                    <p data-i18n="proj.1.desc">Landing page para agência de modelos.</p>
+                    <a href="https://velvet-models-qnz2t05ew-whaltayrs-projects.vercel.app" target="_blank"
+                        class="gallery-link" data-i18n="btn.live">Ver Site <i
+                            class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                </div>
+            </div>
+
+            <div class="gallery-card">
+                <div class="gallery-image">
+                    <img src="assets/img/lovelive-preview.png" alt="LoveLive">
+                    <div class="gallery-overlay"></div>
+                </div>
+                <div class="gallery-content">
+                    <div class="gallery-tags">
+                        <span>React</span>
+                        <span>WEB</span>
+                        <span>Figma</span>
+                    </div>
+                    <h3>LoveLive App</h3>
+                    <p data-i18n="proj.2.desc">Plataforma interativa para casais compartilharem memórias.</p>
+                    <a href="https://lovelive-ez2et2d3c-whaltayrs-projects.vercel.app" target="_blank"
+                        class="gallery-link" data-i18n="btn.live">Ver Demo <i class="fa-solid fa-play"></i></a>
+                </div>
+            </div>
+
+            <div class="gallery-card">
+                <div class="gallery-image">
+                    <img src="assets/img/esma-preview.png" alt="Esma Design">
+                    <div class="gallery-overlay"></div>
+                </div>
+                <div class="gallery-content">
+                    <div class="gallery-tags design">
+                        <span>HTML5</span>
+                        <span>UI Design</span>
+                    </div>
+                    <h3>Esma Design System</h3>
+                    <p data-i18n="proj.3.desc">Sistema de design completo e protótipo de alta fidelidade.</p>
+                    <a href="https://www.esmadesign.site/" target="_blank" class="gallery-link" data-i18n="btn.live">Ver
+                        Design <i class="fa-brands fa-figma"></i></a>
+                </div>
+            </div>
+
+            <div class="gallery-card">
+                <div class="gallery-image">
+                    <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?q=80&w=2426&auto=format&fit=crop"
+                        alt="Dashboard">
+                    <div class="gallery-overlay"></div>
+                </div>
+                <div class="gallery-content">
+                    <div class="gallery-tags">
+                        <span>Dashboard</span>
+                        <span>React</span>
+                    </div>
+                    <h3>Admin Dashboard</h3>
+                    <p>Um painel administrativo complexo com gráficos e tabelas de dados.</p>
+                    <a href="#" class="gallery-link">Ver Detalhes <i class="fa-solid fa-arrow-right"></i></a>
+                </div>
+            </div>
+
         </div>
 
     </main>
 
-<footer class="site-footer">
-    <div class="footer-content">
-        <div class="footer-left">
-            <p>&copy; 2026 Josivaldo Ferreira. All Rights Reserved.</p>
-        </div>
-        <div class="footer-right">
-            <a href="https://github.com/yourusername" target="_blank">GitHub</a>
-            <a href="https://linkedin.com/in/yourusername" target="_blank">LinkedIn</a>
-            <a href="mailto:your@email.com">Email</a>
-        </div>
+    <div class="lang-floating-wrapper">
+        <button onclick="changeLanguage('pt')" class="lang-btn-float" id="float-pt">PT</button>
+        <span class="lang-divider">|</span>
+        <button onclick="changeLanguage('en')" class="lang-btn-float" id="float-en">EN</button>
     </div>
-</footer>
+
+    <footer class="site-footer">
+        <div class="footer-content">
+            <div class="footer-left">
+                <p data-i18n="footer.copy">&copy; 2026 Josivaldo Ferreira.</p>
+            </div>
+            <div class="footer-right">
+                <a href="https://github.com/Whaltayr" target="_blank">GitHub</a>
+                <a href="https://linkedin.com/in/yourusername" target="_blank">LinkedIn</a>
+                <a href="mailto:your@email.com">Email</a>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <script src="assets/js/github.js"></script> 
-        <script src="assets/js/script.js"></script>
+    <script src="assets/js/translations.js"></script>
+    <script src="assets/js/script.js"></script>
+    <script>
+        // Animação de Entrada
+        gsap.from(".gallery-card", {
+            y: 50,
+            opacity: 0,
+            duration: 0.8,
+            stagger: 0.1,
+            ease: "power2.out"
+        });
+    </script>
 </body>
+
 </html>
