--- a/contact.html
+++ b/contact.html
@@ -56,10 +56,7 @@
                 <i class="fa-brands fa-whatsapp"></i> <span data-i18n="nav.chat">Chat on WhatsApp</span>
             </a>
 
-            <div class="lang-switch" style="font-size: 1.5rem; margin-top: 20px;">
-                <button onclick="changeLanguage('en')" style="font-size: 1.5rem;" class="lang-btn">EN</button> / 
-                <button onclick="changeLanguage('pt')" style="font-size: 1.5rem;" class="lang-btn">PT</button>
-            </div>
+           
         </nav>
         <div class="mobile-footer">
             <p data-i18n="mobile.footer">Based in Namibia 🇳🇦</p>
@@ -85,9 +82,9 @@
                 <div class="info-block">
                     <span data-i18n="contact.socials">Socials</span>
                     <div class="contact-socials">
-                        <a href="#" target="_blank">LinkedIn</a>
-                        <a href="#" target="_blank">GitHub</a>
-                        <a href="#" target="_blank">Dribbble</a>
+                        <a href="https://wa.me/264932783626" target="_blank">WhatsApp</a>
+                        <a href="https://github.com/Whaltayr" target="_blank">GitHub</a>
+                 
                     </div>
                 </div>
 
@@ -133,8 +130,7 @@
             </div>
             <div class="footer-right">
                 <a href="https://github.com/Whaltayr" target="_blank">GitHub</a>
-                <a href="https://linkedin.com/in/yourusername" target="_blank">LinkedIn</a>
-                <a href="mailto:your@email.com" data-i18n="nav.contact">Email</a>
+                <a href="mailto:josiwhatson@gmail.com" data-i18n="nav.contact">Email</a>
             </div>
         </div>
     </footer>
