--- a/projects.html
+++ b/projects.html
@@ -117,20 +117,21 @@
                 </div>
             </div>
 
+    
+
             <div class="gallery-card">
                 <div class="gallery-image">
-                    <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?q=80&w=2426&auto=format&fit=crop"
-                        alt="Dashboard">
+                    <img src="assets/img/nabrasa-preview.png?q=80&w=2426&auto=format&fit=crop" alt="Na Brasa">
                     <div class="gallery-overlay"></div>
                 </div>
                 <div class="gallery-content">
                     <div class="gallery-tags">
-                        <span>Dashboard</span>
-                        <span>React</span>
+                        <span>HTML/CSS</span>
+                        <span>Restaurant</span>
                     </div>
-                    <h3>Admin Dashboard</h3>
-                    <p>Um painel administrativo complexo com gráficos e tabelas de dados.</p>
-                    <a href="#" class="gallery-link">Ver Detalhes <i class="fa-solid fa-arrow-right"></i></a>
+                    <h3>Na Brasa</h3>
+                    <p data-i18n="proj.nabrasa.desc">A modern landing page for a premium steakhouse restaurant.</p>
+                    <a href="https://whaltayr.github.io/nabrasa/" target="_blank" class="gallery-link" data-i18n="btn.live">Ver Site <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
 
